depuración enlaces ebook

--- a/xhtml/styles.css
+++ b/xhtml/styles.css
@@ -1,4 +1,10 @@
-/* Styles for DistoX + TopoDroid */
+/* 
+
+Estos estilos se aplicarán en el documento EPUB
+
+DistoX + TopoDroid 
+
+*/
 body {
   font-family: Helvetica, sans-serif;
   }
